# self-healing-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  config.py  groq_client.py  investigator.py  prompts.py  schema_baseline.json  tools.py
agent/reporters/: __init__.py  markdown_reporter.py  slack_reporter.py
dags/: self_healing_daily_pipeline.py
docs/: commands.md
plugins/alerts/: slack_alerts.py
plugins/checks/: quality_gate.py
plugins/load/: postgres_loader.py
plugins/source/: source_api.py
tests/: test_agent_investigator.py  test_agent_reporters.py  test_agent_tools.py  test_quality_gate.py
